# uncle-sams-estimator

./: LICENSE  README.md  estimator.py  pyproject.toml
resources/: income.csv  pnii.csv  pretax_contributions.csv
